--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ serde_derive = "1.0"
 serde_json = "1.0"
 toml = "0.4"
 failure = "0.1.2"
-colored = "1.6"
+ansi_term = "0.11"
 
 [dependencies.chrono]
 version = "0.4"
